<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="2.4"
    tools:context=".AboutActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutImageView"
        android:layout_gravity="center"
        android:src="@drawable/about_logo"
        android:contentDescription="@string/logo"/>

    <TextView
        android:layout_width="fill_parent"
        android:scrollbars="vertical"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/aboutText"
        android:id="@+id/aboutTextView"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1.7"
        android:autoLink="web"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.3"
        android:gravity="center_vertical|center_horizontal">


        <ImageView
            android:id="@+id/about_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onOpenFacebookClick"
            android:padding="6dip"
            android:src="@drawable/ic_facebook"/>

        <ImageView
            android:id="@+id/about_xda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onOpenXdaClick"
            android:padding="6dip"
            android:src="@drawable/ic_xda_icon"/>

        <ImageView
            android:id="@+id/about_googleplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onOpenGoogleplusClick"
            android:padding="6dip"
            android:src="@drawable/ic_googleplus"/>

        <ImageView
            android:id="@+id/about_crowdin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onOpenCrowdinClick"
            android:padding="6dip"
            android:src="@drawable/ic_ic_crowdin"/>

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/aboutFooter"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_weight="0.4"
        android:id="@+id/aboutFooterTextView"/>
</LinearLayout>